test/sema/out_param/out_param_multiple_asterisks.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
// CHECK: [[# @LINE + 1 ]]:11: error: a type can have only one '*' specifier
fn foo(x: **number, y: *number) {}

fn main() {}
